ISIS-537 Fix the alignments for .label-none

--- a/component/viewer/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
+++ b/component/viewer/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
@@ -99,12 +99,18 @@ div.label-top label.control-label {
     padding-left: 10px;
 }
 
+div.label-none label.control-label {
+    padding-left: 10px;
+    visibility: hidden;
+}
+
 div.label-left .scalarValueWrapper {
     width: 70%;
     float: right;
 }
 
-div.label-top .scalarValueWrapper {
+div.label-top .scalarValueWrapper,
+div.label-none .scalarValueWrapper {
     width: 99%;
     display: block;
     padding-left: 8px;
